--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-spring.application.name=backend
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/SEBN?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/SEBN?useSSL=false
+spring.datasource.username=
 spring.datasource.password=
-spring.jpa.generate-ddl=true
 
-
-##Show/Hide SQL queries
-spring.jpa.show-sql=false
-
-server.port=8080
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+SEBN.app.jwtSecret= ======================SEBN=Spring===========================
+SEBN.app.jwtExpirationMs=86400000
