--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,13 @@
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
 		</dependency>
 	</dependencies>
 
@@ -119,15 +124,49 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 						<info>
-							<contact>
-								<email>labrasibrahim@gmail.com</email>
-								<name>Ibrahim Labras</name>
-								<url>https://github.com/IbrahimLabrass/SEBN-Web-site</url>
-							</contact>
+
 						</info>
 					</excludes>
 				</configuration>
 
+			</plugin>
+			<plugin>
+				<groupId>com.github.kongchen</groupId>
+				<artifactId>swagger-maven-plugin</artifactId>
+				<version>3.1.8</version>
+				<configuration>
+					<apiSources>
+						<apiSource>
+							<springmvc>true</springmvc>
+							<locations>
+								<location>com.SEBN.backend.controllers</location>
+							</locations>
+							<basePath>http://localhost:8081</basePath>
+							<info>
+								<title>Swagger Api Documentation for Todo application</title>
+								<version>${project.version}</version>
+								<description>Swagger Api documentation for Todo application</description>
+								<contact>
+									<email>labrasibrahim@gmail.com</email>
+									<name>Ibrahim Labras</name>
+									<url>https://github.com/IbrahimLabrass/SEBN-Web-site</url>
+								</contact>
+							</info>
+							<outputPath>${project.build.directory}</outputPath>
+							<outputFormats>json</outputFormats>
+							<swaggerApiReader>com.github.kongchen.swagger.docgen.reader.SpringMvcApiReader</swaggerApiReader>
+							<swaggerDirectory>${project.build.directory}</swaggerDirectory>
+						</apiSource>
+					</apiSources>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
