--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.username=
 spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+spring.jpa.hibernate.ddl-auto=create
 
 # App Properties
 SEBN.app.jwtSecret= ======================SEBN=Spring===========================
